--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A product of emergent.sh" />
-    <title>Fifth Beryl  | Premium Apparel</title>
+    <meta name="description" content="Premium Apparel by Fifth Beryl" />
+    
+    <link rel="icon" href="%PUBLIC_URL%/assets/favicon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/favicon.png" />
+    <title>Fifth Beryl | Premium Apparel</title>
+    
     <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
     <script src="https://unpkg.com/rrweb@latest/dist/rrweb.min.js"></script>
     <script src="https://d2adkz2s9zrlge.cloudfront.net/rrweb-recorder-20250919-1.js"></script>
