--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/favicon.png" />
-    <title>Fifth Beryl | Prremium Apparel</title>
+    <title>Fifth Beryl | Premium Apparel</title>
     
     <script src="https://assets.emergent.sh/scripts/emergent-main.js"></script>
     <script src="https://unpkg.com/rrweb@latest/dist/rrweb.min.js"></script>
