--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#6F4E37" />
     <meta name="description" content="Premium Apparel by Fifth Beryl" />
     
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon.png" />
